Add ado manager dll from nuget and add open excel files

--- a/src/FileExporter/Properties/Resources.resx
+++ b/src/FileExporter/Properties/Resources.resx
@@ -153,6 +153,9 @@
   <data name="productcode" xml:space="preserve">
     <value>کد محصول</value>
   </data>
+  <data name="qrcodecontent" xml:space="preserve">
+    <value>محتوای بار کد</value>
+  </data>
   <data name="qty" xml:space="preserve">
     <value>تعداد</value>
   </data>
